# redwood-original

./: .gitignore  BUILD.datalog  Cargo.toml  README.md
benches/: README.md  daemon.rs  full_tc_small.rs  incremental.rs  lazy_tc_benchmark.rs  parser.rs  performance.rs  profile_hotspots.rs  profile_tc.rs  query_patterns.rs  realistic_graph.rs  realistic_usage.rs  scalability.rs  startup.rs  tc_bfs_variants.rs  tc_breakdown.rs  tc_detailed_breakdown.rs  tc_new_impl.rs
docs/: CLAUDE.md  NAMESPACE_EXAMPLE.md  NO_SANDBOX.md  OWNERS.datalog  PATTERNS.md  SOURCE_LOCATION.md  SPEC.md  TUTORIAL.md  WITH_FLAG.md
prelude/: aggregates.datalog  aliases.datalog  computed_attributes.datalog  dependency_resolution.datalog  engine_config.datalog  external_data.datalog  git_diff.datalog  glob_support.datalog  graph_generation.datalog  license_validation.datalog  needs_rebuild.datalog  ownership.datalog  patterns.datalog  query_helpers.datalog  toolchain_discovery.datalog
scripts/: query_git_facts.sh
src/: lib.rs  main.rs
test_recursive/: BUILD.datalog
tests/: alias_test.rs  arithmetic_operations_test.rs  arithmetic_safety_test.rs  arity_validation_test.rs  attr_test.rs  build_system_examples_test.rs  build_system_scenarios_test.rs  builtin_type_errors_test.rs  c_binary_test.rs  cache_invalidation_test.rs  command_injection_test.rs  computed_attributes_test.rs  count_builtin_test.rs  datalog_edge_cases_test.rs  datalog_fun_test.rs  datalog_operators_test.rs  datalog_semantics_test.rs  debug_rdeps.rs  debug_rule_eval.rs  dependency_ordering_test.rs  error_message_quality.rs  escape_sequences_test.rs  external_data_test.rs  force_rebuild_lazy_test.rs  format_test.rs  git_diff_test.rs  glob_support_test.rs  graph_generation_test.rs  (+31 more)
tools/cmake_generator/: CMakeLists.txt  INTEGRATION.md  README.md  cmGlobalRedwoodGenerator.cxx.stub  cmGlobalRedwoodGenerator.h  cmake_to_redwood.py
(+16 files in other folders)
